add shift only algo to webui

--- a/sd-card/html/edit_config_template.html
+++ b/sd-card/html/edit_config_template.html
@@ -774,6 +774,8 @@
 					<option value="default" selected>Default</option>
 					<option value="highAccuracy" >HighAccuracy</option>
 					<option value="fast" >Fast</option>
+					<option value="shifthighAccuracy" >Shift only HighAccuracy</option>
+					<option value="shiftfast" >Shift only Fast</option>
 					<option value="off" >Off</option><!-- add disable aligment algo |01.2023 -->
 				</select>
 			</td>
